dev/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector: { matchLabels: { app: registry } }
  template:
    metadata: { labels: { app: registry } }
    spec:
      containers:
      - name: registry
        image: registry:2
        ports: [{ containerPort: 5000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: NodePort
  selector: { app: registry }
  ports:
    - port: 5000
      nodePort: 30500
