dev/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginxservice
spec:
  selector:
    app: nginxdeployment
  ports:
    - protocol: TCP
      port: 80
