dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    nodePort: 8000
